小灯泡搞定啦！

--- a/teamwork/contests/templates/contests/display_contest.html
+++ b/teamwork/contests/templates/contests/display_contest.html
@@ -22,7 +22,7 @@
 			<th>
 				{% if contest.contest_type == 'Onsite' %}
 					<a data-toggle="tooltip" title="Onsite Contest">
-					<i class="icon-lightbulb icon-large"></i>
+					<i class="fa fa-lightbulb-o fa-lg"></i>
 					</a>
 				{% endif %}
 				{{ contest.contest_type }}
