--- a/teamwork/contests/templates/contests/index.html
+++ b/teamwork/contests/templates/contests/index.html
@@ -26,7 +26,7 @@
 				<td>
 					{% if i.contest_type == 'Onsite' %}
 					<a data-toggle="tooltip" title="Onsite Contest">
-					<i class="icon-lightbulb icon-large"></i>
+					<i class="fa fa-lightbulb-o fa-lg"></i>
 					</a>
 					{% endif %}
 					<a href="{% url 'contests:display_contest' i.id %}">
