--- a/teamwork/users/templates/users/show_user.html
+++ b/teamwork/users/templates/users/show_user.html
@@ -38,7 +38,7 @@
       <th>
       {% if i.onsite_tag %}
 	    <a data-toggle="tooltip" title="Onsite Contest">
-	    <i class="icon-lightbulb icon-large"></i>
+		<i class="fa fa-lightbulb-o fa-lg"></i>
 		</a>
       {% endif %}
 	  <a href="{% url 'contests:display_contest' i.head %}">
