--- a/teamwork/contests/templates/contests/display_contest.html
+++ b/teamwork/contests/templates/contests/display_contest.html
@@ -1,4 +1,5 @@
 {% extends "index_page/base.html" %}
+{% load url_extras %}
 
 {% block content %}
 
@@ -30,7 +31,7 @@
 		</tr>
 		<tr>
 			<th>Link</th>
-			<th>{{ contest.contest_link|urlize }}</th>
+			<th>{{ contest.contest_link|urlize | urlize_target_blank:100 }}</th>
 		</tr>
 	</table>
 
