Onsite Contest 显示时删除 Link 链接

--- a/teamwork/contests/templates/contests/display_contest.html
+++ b/teamwork/contests/templates/contests/display_contest.html
@@ -29,10 +29,12 @@
 				{{ contest.contest_type }}
 			</th>
 		</tr>
+		{% if contest.contest_type == 'Online' %}
 		<tr>
 			<th>Link</th>
-			<th>{{ contest.contest_link|urlize | urlize_target_blank:100 }}</th>
+			<th>{{ contest.contest_link|urlize|urlize_target_blank }}</th>
 		</tr>
+		{% endif %}
 	</table>
 
 
