update team_form and user_form and modify_profiles and register

--- a/teamwork/users/templates/users/base.html
+++ b/teamwork/users/templates/users/base.html
@@ -13,4 +13,8 @@
           {% endblock content %}
       </div>
   </body>
+  <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
+  <script src="{% static 'js/popper.min.js' %}"></script>
+  <script src="{% static 'js/bootstrap4.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/bootstrap-datepicker.min.js' %}"></script>
 </html>
