--- a/teamwork/users/templates/users/register.html
+++ b/teamwork/users/templates/users/register.html
@@ -1,10 +1,9 @@
-{% extends "users/base.html" %}
-{% load staticfiles %}
-{% load widget_tweaks %}
+{% extends "index_page/base.html" %}
 
+{% load widget_tweaks %}
 {% block title %}Register{% endblock title %}
 {% block content %}
-
+<div class="section">
   <form class="form-users" method="post" action="{% url 'users:register' %}" >
     {% csrf_token %}
     <h2>Register</h2>
@@ -12,16 +11,16 @@
     <div class="form-group">
       {% include 'users/forms/user_form.html' %}
       {% include 'users/forms/team_form.html' %}
-    </div>        
-    <button name="submit" class="btn btn-primary">Register</button>
-    <a class="btn btn-outline-primary" href="/">Go Back</a>
+    </div>
+    <div style="text-align: center">
+      <button name="submit" class="btn btn-primary">Register</button>
+      <a class="btn btn-outline-primary" href="/">Go Back</a>
+    </div>
     <input type="hidden" name="next" value="{% url 'index_page:index' %}" />
   </form>  
-  {{ team_form.media }}
-  <p>Have an account? <a href="{% url 'users:login' %}">Click</a> to log in.</p> 
-  </div>   
-
-
-
+  <div style="text-align: center">
+    <p>Have an account? <a href="{% url 'users:login' %}">Click</a> to log in.</p> 
+  </div>
+</div>
 {% endblock content %}
 
