--- a/teamwork/users/templates/users/forms/team_form.html
+++ b/teamwork/users/templates/users/forms/team_form.html
@@ -1,17 +1,15 @@
-
+{% load widget_tweaks %}
 {% for field in team_form %}
-      <div class="item row">
-        <div class="col-md-6" align="left">{{ field.label_tag }}</div> 
-        <div class="col-md-{% if 'Team Description' in field.label_tag %}{{ 12 }}{% else %}{{ 6 }}{% endif %}">
-          {{ field }}
-            {% if field.errors %}
-            <div class="error-message text-danger">
-                {% for error in field.errors %}
-                  {{ error }}
-                {% endfor %}
-            </div>
-          {% endif %}
-        </div>
-        
-      </div>
-      {% endfor %}
+	<div class="form-group">
+		<span>
+			{{ field.label }}
+		</span>
+		{{ field | add_class:"form-control"}}
+		<p class="error-message text-danger">
+			{% for error in field.errors %}
+				{{ error }}
+			{% endfor %}
+		</p>
+	</div>
+{% endfor %}
+{{ team_form.media }}
