--- a/teamwork/users/templates/users/forms/user_form.html
+++ b/teamwork/users/templates/users/forms/user_form.html
@@ -1,16 +1,15 @@
+{% load widget_tweaks %}
 {% for field in user_form %}
-      <div class="item row">
-        <div class="col-md-6 col-sm-6" align="left">{{ field.label_tag }}</div> 
-        <div class="col-md-6 col-sm-6">{{ field }}
-            {% if field.errors %}
-            <div class="error-message text-danger">
-                {% for error in field.errors %}
-                  {{ error }}
-                {% endfor %}
-            </div>
-          {% endif %}
-
-        </div>
-        
-      </div>
-    {% endfor %}
+	<div class="form-group">
+		<span>
+			{{ field.label }}
+		</span>
+		{{ field | add_class:"form-control"}}
+		<p class="error-message text-danger">
+			{% for error in field.errors %}
+				{{ error }}
+			{% endfor %}
+		</p>
+	</div>
+{% endfor %}
+{{ team_form.media }}
