--- a/teamwork/contests/templates/contests/display_contest.html
+++ b/teamwork/contests/templates/contests/display_contest.html
@@ -37,11 +37,12 @@
 		{% endif %}
 	</table>
 
-
+	{% if user.id is not None %}
 	<div style="text-align:right">
-		<a class={{ user.id|yesno:'"btn btn-sm btn-primary","btn btn-sm btn-secondary disabled"'|safe }} href="{% url 'summary:display_status' user_id contest.id %}">View My Summary</a>
-		<a class={{ user.id|yesno:'"btn btn-sm btn-primary","btn btn-sm btn-secondary disabled"'|safe }} href="{% url 'contests:edit_contest' contest.id %}">Edit Contest</a>
+		<a class={{ "btn btn-sm btn-primary" href="{% url 'summary:display_status' user_id contest.id %}">View My Summary</a>
+		<a class={{ "btn btn-sm btn-primary" href="{% url 'contests:edit_contest' contest.id %}">Edit Contest</a>
 	</div>
+	{% endif %}
 </div>
 
 <div class="section">
