--- a/teamwork/contests/templates/contests/index.html
+++ b/teamwork/contests/templates/contests/index.html
@@ -7,7 +7,9 @@
 <div class="section">
 	<h1>Contests</h1>
 	<div>
-		<a class={{ user.id|yesno:'"btn btn-primary","btn btn-secondary disabled"'|safe }} href="{% url 'contests:add_contest' %}" >Add Contest</a>
+		{% if user.id is not None %}
+		<a class="btn btn-primary" href="{% url 'contests:add_contest' %}" >Add Contest</a>
+		{% endif %}
 	</div>
 
 	<br>
