--- a/teamwork/users/templates/users/change_password.html
+++ b/teamwork/users/templates/users/change_password.html
@@ -1,4 +1,4 @@
-{% extends "users/base.html" %}
+{% extends "index_page/base.html" %}
 {% load staticfiles %}
 {% load widget_tweaks %}
 {% block title %}Change Password{% endblock title %}
@@ -6,10 +6,14 @@
 {% endblock stylesheet %}
 
 {% block content %}
-  <form class="form-users" method="post" action="{% url 'users:change_password' %}" novalidate>
+<div class="section">
+  <form class="form-users myforms" method="post" action="{% url 'users:change_password' %}" novalidate>
     {% csrf_token %}
     {% include 'users/forms/change_password.html' %}
-  <button name="submit" class="btn btn-primary">Submit</button>
-  <a  class="btn btn-outline-primary" href="{% url 'index_page:index'%}">Go Back</a>
+  <center>
+    <button name="submit" class="btn btn-primary">Submit</button>
+    <a  class="btn btn-outline-primary" href="{% url 'index_page:index'%}">Go Back</a>
+  </center>
   </form>
+</div>
 {% endblock content %}
