--- a/teamwork/users/templates/users/change_password_done.html
+++ b/teamwork/users/templates/users/change_password_done.html
@@ -1,4 +1,4 @@
-{% extends "users/base.html" %}
+{% extends "index_page/base.html" %}
 {% load staticfiles %}
 {% load widget_tweaks %}
 {% block title %}Change Password{% endblock title %}
