--- a/teamwork/users/templates/users/forms/change_password.html
+++ b/teamwork/users/templates/users/forms/change_password.html
@@ -1,20 +1,16 @@
+{% load widget_tweaks %}
 <h2>Change Password</h2>
 <hr>
+{% for field in form %}
 <div class="form-group">
-        {% for field in form %}
-        <div class="item row">
-          <!-- {{ field.errors }} -->
-          <div class="col-sm-6" align="left">{{ field.label_tag }}</div> 
-          <div class="col-md-6 col-sm-3">
-            {{ field }}
-            {% if field.errors %}
-            <div class="error-message text-danger">
-                {% for error in field.errors %}
-                  {{ error }}
-                {% endfor %}
-            </div>
-            {% endif %}
-          </div>
-        </div>
-        {% endfor %} 
+  <span>
+    {{ field.label }}
+  </span>
+  {{ field | add_class:"form-control"}}
+  <p class="error-message text-danger">
+    {% for error in field.errors %}
+      {{ error }}
+    {% endfor %}
+  </p>
 </div>  
+{% endfor %}
