--- a/teamwork/users/static/users/css/login.css
+++ b/teamwork/users/static/users/css/login.css
@@ -1,21 +1,22 @@
-html,
+/* html,
 body {
   height: 100%;
 }
 
+
 body {
-  display: -ms-flexbox;
-  display: -webkit-box;
   display: flex;
-  -ms-flex-align: center;
-  -ms-flex-pack: center;
-  -webkit-box-align: center;
   align-items: center;
-  -webkit-box-pack: center;
+  align-content: center;
   justify-content: center;
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: #f5f5f5;
+} */
+
+#login{
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .form-signin {
