--- a/teamwork/users/templates/users/login.html
+++ b/teamwork/users/templates/users/login.html
@@ -1,4 +1,4 @@
-{% extends "users/base.html" %}
+{% extends "index_page/base.html" %}
 {% load staticfiles %}
 {% load widget_tweaks %}
 {% block title %}Log in{% endblock title %}
@@ -7,18 +7,32 @@
 {% endblock stylesheet %}
 
 {% block content %}
+<div class="section">
   {% if user.is_authenticated %}
     <p>You have login. Go back to <a href="/">index</a></p>
   {% else %}
+  <h2 style="text-align:center">Log in</h2>
   <form class="form-signin" method="post" action="{% url 'users:login' %}" novalidate>
       {% csrf_token %}
       <label for="id_username" class="sr-only">Username</label>
         {{ form.username | add_class:"form-control" | attr:"placeholder:Username"}}
       <label for="id_password" class="sr-only">Password</label> 
         {{ form.password | add_class:"form-control" | attr:"placeholder:Password"}}
-    <button class="btn btn-primary " type="submit" name="submit">登录</button>
-    <a href="{% url 'users:register' %}" class="btn btn-outline-primary">注册</a>
+        {% if form.error_messages %}
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+          <strong>Username or Password invalid. Please try again. </strong>
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+           <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+      
+        {% endif %}
+    <center>
+      <button class="btn btn-primary " type="submit" name="submit">Submit</button>
+      <a href="{% url 'users:register' %}" class="btn btn-outline-primary">Register</a>
+    </center>
     <input  type="hidden" name="next" value="{{ next }}" />
   </form>
   {% endif %}
+</div>
 {% endblock content %}
