fix issue #38 and add highlight and image upload for markdown

--- a/teamwork/index_page/templates/index_page/base.html
+++ b/teamwork/index_page/templates/index_page/base.html
@@ -9,6 +9,7 @@
   <title>{% block title %}Test title{% endblock %}</title>
   <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"> 
   <link rel="stylesheet" href="{% static 'css/base.css' %}">
+  <link rel="stylesheet" href="{% static 'css/styles.css' %}">
   {% fontawesome_stylesheet %}
   {% block stylesheet %}{% endblock %}
 </head>
