Modify: About Page

--- a/teamwork/index_page/templates/index_page/about.html
+++ b/teamwork/index_page/templates/index_page/about.html
@@ -1,7 +1,39 @@
 {% extends "index_page/base.html" %} 
 
+{% block title %}
+About Us
+{% endblock %}
+
 {% block content %} 
 
-高级技术编程课程苦逼期末作业
+<div class="section">
+	<h2>About Us</h2>
+	<p>
+		This Training System is a GPL product from <a href="https://github.com/africamonkey/ICPC-Training-Summary/">ICPC-Training-Summary</a> 
+	</p>
+	<p>
+		GPL v3 licensed by <a href="https://github.com/africamonkey/ICPC-Training-Summary/">ICPC-Training-Summary</a>
+	</p>
+	<h2>Designers and Developers</h2>
+	<table cellpadding="10">
+    <tr>
+	  <td>Kaiqi Wang</td>
+      <td><a href="https://github.com/africamonkey">https://github.com/africamonkey</a></td>
+    </tr>
+    <tr>
+      <td>Zihui Liu</td>
+      <td><a href="https://github.com/kingiw">https://github.com/kingiw</a></td>
+    </tr>
+    <tr>
+      <td>Weibin Ou</td>
+      <td><a href="https://github.com/Dexan-Ou">https://github.com/Dexan-Ou</a></td>
+    </tr>
+    <tr>
+      <td>Qirui Tian</td>
+      <td><a href="https://github.com/AkiraFukuda">https://github.com/AkiraFukuda</a></td>
+    </tr>
+
+  </table>
+</div>
 
 {% endblock content %}
