--- a/teamwork/index_page/templates/index_page/base.html
+++ b/teamwork/index_page/templates/index_page/base.html
@@ -6,7 +6,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>{% block title %}Test title{% endblock %}</title>
+  <title>{% block title %}ICPC Training Summary{% endblock %}</title>
   <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"> 
   <link rel="stylesheet" href="{% static 'css/base.css' %}">
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
